# rov-seabed-inspection

./: .gitignore  README.md  pyproject.toml  run.md
configs/: video1.yaml
demo/video7/: README.md
demo/video7/final_report/: final_frame_reports.json  final_keyframes.csv  final_report.md
demo/video7/frame_reports/: frame_reports.csv  frame_reports.json  frame_reports.jsonl  frame_reports.md
demo/video7/keyframes/: keyframes.csv
ground_truth/: ground truth instruction.yaml  video1.yaml
project_website/: index.html  script.js  styles.css
scripts/: analyze_keyframes_vlm.py  compare_keyframe_runs.py  evaluate_against_ground_truth.py  run_pipeline.py  select_keyframes.py  synthesize_report.py
src/rov_inspect/: __init__.py  config.py  contact_sheet.py  descriptors.py  dino_features.py  features.py  keyframes.py  paths.py  quality.py  schema.py  telemetry.py  video_io.py
tests/: test_analyze_keyframes_vlm.py  test_descriptors.py  test_dino_features.py  test_keyframes.py  test_synthesize_report.py  test_telemetry.py
